# JavaDeepLearingService

./: README.md  pom.xml
src/main/cpp/: org_opencv_AgeGenderCheck.cpp  org_opencv_AgeGenderCheck.h
src/main/java/: Application.java  test.java
src/main/java/age/controller/: AgeController.java
src/main/java/age/server/: AgeConfig.java  AgeServer.java
src/main/java/org/kaldi/: KaldiRecognizer.java  Makefile  Model.java  SpkModel.java  Vosk.java  VoskJNI.java  vosk_wrap.cc
src/main/java/org/opencv/: AgeGenderCheck.java  CMakeLists.txt  org_opencv_AgeGenderCheck.h
src/main/java/speech/controller/: SpeechController.java
src/main/java/speech/server/: SpeechConfig.java  SpeechServer.java
src/main/resources/: application.properties
src/main/resources/static/speech/: inputImage.js  record-core.js  wav.js
src/main/resources/templates/: age.html  example.html  index.html
